--- a/k8s-specifications/staging/vote-deployment.yaml
+++ b/k8s-specifications/staging/vote-deployment.yaml
@@ -15,8 +15,7 @@ spec:
         app: vote
     spec:
       containers:
-      - image: voting-app/vote  # use the modified local image
-        imagePullPolicy: Never  # force local image to be used
+      - image: ghcr.io/jeomhps/modified-vote:sha-e60b98a
         name: vote
         env:
           - name: ENVIRONMENT
