fix : use global env instead of local
It seems that to take prevalence with the parent chart values, you
should use global.env into the child charts.

--- a/splitted-helm-voting-app/voting-app/values/dev.yaml
+++ b/splitted-helm-voting-app/voting-app/values/dev.yaml
@@ -1,17 +1,21 @@
-environment: dev
+global:
+  environment: dev
 
 vote:
   replicaCount: 1
+  environment: dev
   service:
     nodePort: 31010
 
 result:
   replicaCount: 1
+  environment: dev
   service:
     nodePort: 31011
 
 worker:
   replicaCount: 1
+  environment: dev
 
 db:
   replicaCount: 1
